# vrvideopump

./: LICENSE  README.md  config.example.json  pyproject.toml
app/: config.py  main.py  videos.py  ws.py
deploy/systemd/: mnt-smb.service  vrvideopump.service
scripts/: precache_thumbnails.py
static/: control.html  control.js  desktop-webrtc.js  headset.html  headset.js  style.css
