[project]
name = "vrvideopump"
version = "0.1.0"
description = "Local WebXR VR video server for Quest browser playback."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "fastapi>=0.116",
  "uvicorn[standard]>=0.35",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uvicorn]
factory = false
